Bug 2030239 - [devtools] Include property values referenced in container query condition in the @container tooltip. r=devtools-reviewers,jdescottes,devtools-backward-compat-reviewers.
This patch make it so the tooltip we show when hovering a `@container` query condition
in the rule view will have the properties that are directly referenced in the condition.
So for example, if the query is `@container (width > 10px)` it'll have `width`,
if it's `@container style(--x)` it'll have `--x`, if it's `@container style(attr(data-x px))`,
it'll have `data-x` and so on.
We also indicate when referenced variables and attributes are not set.
Tests case are added in !!browser_rules_container-queries.js!! to cover the different
features we can have. We also now assert the condition text in `assertQueryContainerTooltip`
so it's easier to understand which condition the function is asserting.

Differential Revision: https://phabricator.services.mozilla.com/D294420

--- a/devtools/client/themes/tooltips.css
+++ b/devtools/client/themes/tooltips.css
@@ -255,6 +255,12 @@ strong {
   list-style: none;
 }
 
+.devtools-tooltip-query-container ul.unset-properties {
+  margin-block-start: 1em;
+  padding-block-start: 1em;
+  border-block-start: 1px solid var(--theme-popup-dimmed);
+}
+
 .devtools-tooltip-query-container .objectBox-node .tag-name {
   color: var(--theme-highlight-blue);
 }
@@ -269,6 +275,10 @@ strong {
 
 .devtools-tooltip-query-container .property-value {
   color: var(--theme-highlight-red);
+
+  &.empty {
+    color: var(--theme-text-color-inactive);
+  }
 }
 
 /* Tooltip: Tiles */
